--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -35,6 +35,7 @@
     .duvs {
         max-width: 1200px;
         width: 100%;
+        height: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
