--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -47,6 +47,7 @@
             border-radius: 10px;
             padding: 16px;
             width: 380px;
+            height: 220px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
             display: flex;
             flex-direction: column;
