fix: layout home

--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -6,10 +6,11 @@
     width: 100%;
     background: white;
     margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 
     .content {
         margin-top: 10px;
-        max-width: 1200px;
+        max-width: 1275px;
         width: 100%;
         margin: auto;
         display: flex;
